# taiko-tool

./: .gitignore  CMakeLists.txt  get-tools-linux.sh
assets/: CMakeLists.txt  icons.qrc  n3b.qrc  template.nus3bank
forms/: CMakeLists.txt  SettingsDialog.ui  SongDuplicateDialog.ui  TaikoTool.ui
src/: BuildTabManager.cpp  CMakeLists.txt  SongManager.cpp  SongTabManager.cpp  TaikoSong.cpp  TaikoTool.cpp  main.cpp
src/dialogs/: CMakeLists.txt  OperationDialogs.cpp  SettingsDialog.cpp
src/include/: BuildTabManager.h  CMakeLists.txt  Convert.h  GZip.h  Nus3bank.h  Queue.h  SongManager.h  SongTabManager.h  TaikoSong.h  TaikoTool.h  Utils.h
src/include/dialogs/: CMakeLists.txt  OperationDialogs.h  SettingsDialog.h
